--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/http-foundation": "2.4.*",
         "symfony/http-kernel": "2.4.*",
         "symfony/dependency-injection": "2.4.*",
-        "symfony/routing": "2.4.*"
+        "symfony/routing": "2.4.*",
+        "twig/twig": "1.15.*"
     }
 }
